--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,42 +1,26 @@
-<header>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          aria-controls="jumbotronExample"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-        <div
-          mdbCollapse
-          class="collapse navbar-collapse"
-          id="jumbotronExample"
-        >
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link"  href="/">Accueil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/masters">Masters</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/promotion">Promotions</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/actualite">Actualité</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
-              </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Navbar -->
-  
-   
-  </header>
+<section class="top-nav">
+    <div>
+        ECOLE DE DROIT (ICON)
+    </div>
+    <input id="menu-toggle" type="checkbox" />
+    <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+    </label>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Accueil</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/masters">Masters</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/promotion">Promotions</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/actualite">Actualité</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+        </li>
+    </ul>
+</section>
