move components into folder

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <label class='menu-button-container' for="menu-toggle">
         <div class='menu-button'></div>
     </label>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu">
+    <ul class="navbar-nav  mb-2 mb-lg-0 menu">
         <li class="nav-item active">
             <a class="nav-link" href="/">Accueil</a>
         </li>
